Fix: Add left padding to bottom-right feature and wrap text
- Added padding-left: 24px to hero-feature-bottom-right
- Wrapped text 'Since 2010, trusted by corporate & VIP clients' on two lines

--- a/sass/blocks/_hero.scss
+++ b/sass/blocks/_hero.scss
@@ -239,6 +239,7 @@
 	grid-row: 2;
 	padding-top: 32px;
 	padding-bottom: 6px;
+	padding-left: 24px;
 	justify-content: flex-start;
 }
 
