--- a/style.css
+++ b/style.css
@@ -2119,6 +2119,7 @@ a.phone-button:focus,
 	grid-row: 2;
 	padding-top: 32px;
 	padding-bottom: 6px;
+	padding-left: 24px;
 	justify-content: flex-start;
 }
 
